--- a/about.html
+++ b/about.html
@@ -1,31 +1,43 @@
 {% extends "base.html" %}
 {% block content %}
 
-<p><a href="/">pravaas.org</a> is based on a simple idea: <i>High
-quality mentor-ship and advice must be available to every student
-anywhere in this world for free</i>. Join pravaas.org either as a
-mentor or as a student and make a difference with your time, ideas and
+<p><a href="/">pravaas.org</a> is based on a simple idea: 
+
+<p><center><i>High quality mentor-ship and advice must be available to
+every student anywhere in this world for free</i>.</center></p>
+
+You can contribute to discussions at pravaas.org either as a mentor or
+as a student and make a difference with your time, ideas and
 advice. Pravaas stands for Journey in sanskrit, so let this just be a
-pit stop. Post any question you may have in the <a
-href="/">discuss</a> link above and a mentor will be assigned to
-you. pravaas.org was founded by Hareesh Nagarajan and Prem Mohanty in
-early October 2009.</p>
+short pit stop. Post any question you may have in the <a
+href="/discuss">discuss</a> link above and a mentor will be assigned
+to you. pravaas.org was <a
+href="http://www.pravaas.org/archives?place=topic%2Fpravaas-archives%2FN1IDmUsJpcg%2Fdiscussion">founded</a>
+in early October 2009. To learn more about <a href="/">pravaas.org</a>
+read the <a
+href="http://www.pravaas.org/archives?place=topic%2Fpravaas-archives%2FsaxMkgQvF9I%2Fdiscussion">FAQ</a>.
+</p>
 
 <p>
 <a href="/">pravaas.org</a> used to be hosted as a social network on
 ning.com (<a href="/redirect">pravaas.ning.com</a>). In May 2010,
-ning.com announced they were going pay-only. This aggravated one of
-the founders and he decided to take matters into his own hands and
-host the entire network himself. The result is a much simpler and easy
-to use service. And to top it all, going forward, you do not need to
-sign up for a ning.com account. To post a message you just need a
-Google Account! You do not need to give us your password! Sometimes
-disruptive changes are for the better!
+ning.com announced they were going pay-only. This <a
+href="http://www.pravaas.org/archives?place=topic%2Fpravaas-archives%2FplF-jOFxQ8Q%2Fdiscussion">aggravated</a>
+one of the founders and he decided to take matters into his own hands
+and host the entire network himself. The result is a much simpler and
+easy to use service. And to top it all, you do not need to sign up for
+a ning.com account. To post a message you just need a Google Account! 
+<i>Sometimes, disruptive changes are for the better!</i>
 </p>
 
 <p>
 Check out the <a href="/archives">archives</a> to get a sense of the
-kinds of questions that have been asked in the past.
+kinds of questions that have been asked in the past (like this one: <a
+href="http://www.pravaas.org/archives?place=topic%2Fpravaas-archives%2F-3h89YeyHc4%2Fdiscussion">Acing
+the technical interview</a>).
 </p>
+
+<object id="doc_128212422231205" name="doc_128212422231205" height="700" width="100%" type="application/x-shockwave-flash" data="http://d1.scribdassets.com/ScribdViewer.swf" style="outline:none;" rel="media:document" resource="http://d1.scribdassets.com/ScribdViewer.swf?document_id=20936961&access_key=key-2m5qtunn6na4n6u04kek&page=1&viewMode=list" xmlns:media="http://search.yahoo.com/searchmonkey/media/" xmlns:dc="http://purl.org/dc/terms/" >		<param name="movie" value="http://d1.scribdassets.com/ScribdViewer.swf">		<param name="wmode" value="opaque"> 		<param name="bgcolor" value="#ffffff"> 		<param name="allowFullScreen" value="true"> 		<param name="allowScriptAccess" value="always"> 		<param name="FlashVars" value="document_id=20936961&access_key=key-2m5qtunn6na4n6u04kek&page=1&viewMode=list"> 		<embed id="doc_128212422231205" name="doc_128212422231205" src="http://d1.scribdassets.com/ScribdViewer.swf?document_id=20936961&access_key=key-2m5qtunn6na4n6u04kek&page=1&viewMode=list" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" height="100%" width="100%" wmode="opaque" bgcolor="#ffffff"></embed> 	</object>
+
 
 {% endblock %}
