--- a/base.html
+++ b/base.html
@@ -77,7 +77,7 @@
       
       <center>
       <h3>pravaas.org</h3>
-      <a href="/">about</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/discuss">discuss</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/archives">archives</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.facebook.com/pages/Pravaas/155400472070">facebook</a></center>
+      <a href="/">about</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/discuss">discuss</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/archives">archives</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.facebook.com/pages/Pravaas/155400472070">facebook</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://groups.google.com/group/pravaas-discuss">members</a></center>
 
 
       {% if load_forum %}
