--- a/base.html
+++ b/base.html
@@ -41,7 +41,7 @@
                 encodeURIComponent(window.location.href);
             adjustArchives();
           }
-          window.onresize = adjust;
+          window.onresize = adjustArchives;
         </script>
 
 
@@ -66,7 +66,7 @@
                 encodeURIComponent(window.location.href);
             adjustForum();
           }
-          window.onresize = adjust;
+          window.onresize = adjustForum;
         </script>
 
         <script type="text/javascript">
